--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /*  your css code here. If applicable */
+#yellow{
+	background-color:yellow;
+	border-width:1px;
+	border-color: green;
+	 border-style: solid;
+}
+#red{
+	background-color:red;
+	border:ipx solid black;
+}
+#green{
+	background-color:green;
+	border:1px solid yellow
+}
